# comfyui-latent-astronaut-suite

./: .gitignore  CLAUDE.md  LICENSE  README.md  __init__.py  install.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
js/: dynamicInputs.js
nodes/: __init__.py  chatterbox_nodes.py  for_loop.py  image_batch_utils.py  image_resize.py  llm_config.py  llm_prompt.py  lora_selector.py  size_selector.py  string_list.py
workflows/: la_flux2_klein_distilled_t2i.json  latent_astronaut_svi_loop_v1.json
workflows/svi-wan22/: README.md  SVI Loop v2 - Latent Astronaut.json.json
